# chat-ui-11

./: .env.example  .env.otel.example  .gitignore  .gitlab-ci.yml  2.1-mcp-spec.md  Agent_note.md  CLAUDE.md  Dockerfile  Dockerfile-test  INLINE_FILE_REFERENCE_SUMMARY.md  README.md  README2.md  S3_IMPLEMENTATION_SUMMARY.md  SECURITY.md  agent_start.sh  agent_start_sever_dev.sh  bad_chars.ps1  custom_html.md  endpoint_summary.md  file_mcp_sprint.md  ideas-todo.md  instructions2.md  items  mcp_note.md  plan.md  pyproject.toml  rag-instructions.md  refactor_plan.md  requirements.txt  requirements2.txt  stop_python.sh  temp.txt  temp1  test_streaming.py  v2_mcp_note.md
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: copilot-instructions.md
.notworkingdevcontainer/: devcontainer.json
.old_backend/: old_session.py
.oldfrontend/: index.html  package-lock.json  playwright.config.js
.try3_frontend/: tailwind.config.js  vite.config.js
_old_docs/: Dockerfile  MCP_UI_MODIFICATION.md  agent_setup.sh  dev.md  frontend-README.md  frontend-example.html  ideas-todo.md  instructions2.md  rag-instructions.md  start.sh
_old_frontend/: index-offline.html  index.html  style.css
backend/: admin.html  admin_routes.py  agent_executor.py  auth.py  auth_utils.py  banner_client.py  callbacks.py  config.py  config_routes.py  custom_callbacks.py  demo_custom_prompts.py  feedback_routes.py  file_config.py  files_routes.py  help-page.md  http_client.py  integration_test_prompts.py  llm_caller.py  llm_health_check.py  llm_processor.py  logging_config.py  main.py  main_refactored.py  mcp.json  mcp_client.py  mcp_health_check.py  message_processor.py  middleware.py  oldmain.py  otel_config.py  otlp_upgrade_example.py  output_presentation.html  output_presentation.pptx  prompt_utils.py  rag_client.py  s3_client.py  session.py  test_agent_logging.py  test_otel_integration.py  test_prompts_manual.py  (+3 more)
docs/: advanced-features.md  app_name.md  backend.md  configuration.md  custom-prompting.md  developer-setup.md  direct_s3_reference_pipeline.md  file-handling.md  frontend.md  logging.md  mcp-development.md  quick-start.md  todo.md
mcp/mcp-enhanced/: .coverage  README.md  pyproject.toml
mcp/mcp-enhanced/docs/: README.md
mcp/mcp-enhanced/examples/: examples.py
mcp/mcp-enhanced/mcp_enhanced/: __init__.py  decorator.py  exceptions.py  responses.py  sandbox.py  utils.py
mcp/mcp-enhanced/tests/: test_decorator.py  test_responses.py  test_utils.py
(+436 files in other folders)
